@@ -1,19 +1,15 @@
 import com.github.jengelman.gradle.plugins.shadow.ShadowPlugin
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 plugins {
     id 'groovy'
     id 'project-report'
     id 'idea'
     id 'java-gradle-plugin'
-    // id 'signing'
+    id 'signing'
     id 'com.gradle.plugin-publish' version '1.1.0'
     id 'org.ajoberstar.git-publish' version '4.1.1'
     id 'com.github.node-gradle.node' version '3.5.1'
-}
-
-// Remove the gradleApi so it isn't merged into the jar file.
-configurations.named(JavaPlugin.API_CONFIGURATION_NAME) {
-    dependencies.remove(project.dependencies.gradleApi())
 }
 
 apply plugin: ShadowPlugin
@@ -29,7 +25,7 @@ repositories {
     mavenCentral()
 }
 
-test {
+tasks.withType(Test).configureEach {
     useJUnitPlatform()
 
     if (System.env.CI == 'true') {
@@ -39,20 +35,25 @@ test {
     }
 
     systemProperty 'java.io.tmpdir', buildDir.absolutePath
+
+    // Required to test configuration cache in tests when using withDebug()
+    // https://github.com/gradle/gradle/issues/22765#issuecomment-1339427241
+    jvmArgs(
+            "--add-opens",
+            "java.base/java.util=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/java.net=ALL-UNNAMED",
+    )
 }
 
-// jar {
-//     from rootProject.file('LICENSE')
-//     from rootProject.file('NOTICE')
-// }
-
-// jar.enabled = false
-
-shadowJar {
+tasks.named('shadowJar', ShadowJar) {
     from rootProject.file('LICENSE')
     from rootProject.file('NOTICE')
     enableRelocation true
-    // archiveClassifier = ''
 }
 
 idea {
@@ -72,19 +73,3 @@ tasks.register('downloadDependencies', Exec) {
     dependsOn configurations.testRuntimeClasspath
     commandLine 'echo', 'Downloaded all dependencies'
 }
-
-// tasks.named('build') { dependsOn tasks.named('shadowJar') }
-
-// tasks.withType(JavaCompile).configureEach {
-//     // This will be the default in Gradle 5.0
-//     if (!options.compilerArgs.contains("-processor")) {
-//         options.compilerArgs << '-proc:none'
-//     }
-// }
-
-// tasks.withType(GroovyCompile).configureEach {
-//     // This will be the default in Gradle 5.0
-//     if (!options.compilerArgs.contains("-processor")) {
-//         options.compilerArgs << '-proc:none'
-//     }
-// }
